fixed: 适配最新版本IDEA,修复新版本IDEA报错信息